@@ -1,3 +1,5 @@
+$ErrorActionPreference = "Stop"
+
 # Delete and stop the service if it already exists.
 if (Get-Service {{.BeatName}} -ErrorAction SilentlyContinue) {
   $service = Get-WmiObject -Class Win32_Service -Filter "name='{{.BeatName}}'"
@@ -13,8 +15,5 @@ New-Service -name {{.BeatName}} `
   -displayName {{.BeatName | title}} `
   -binaryPathName "`"$workdir\{{.BeatName}}.exe`" --path.home `"$workdir`" --path.data  `"$workdir\data`" run"
 
-# Attempt to set the service to delayed start using sc config.
-Try {
-  Start-Process -FilePath sc.exe -ArgumentList 'config {{.BeatName}} start= delayed-auto'
-}
-Catch { Write-Host -f red "An error occured setting the service to delayed start." }
+# Start the new service.
+Start-Service -name {{.BeatName}}
